[tool.poetry]
name = "flibusta-tg"
version = "0.1.0"
description = "telegram bot for flibusta"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.20.0.post0"
aiohttp-socks = "^0.10.1"
beautifulsoup4 = "^4.13.4"
sqlalchemy = "^2.0.41"
parameterized = "^0.9.0"
fake-useragent = "^2.2.0"
psycopg2 = "^2.9.10"
lxml = "^5.4.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
